--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "server.js",
   "repository": "https://github.com/johnsoph/HikingTrailsJustForYou.git",
   "license": "MIT",
-
   "scripts": {
     "dev": "run-p dev:**",
     "dev:server": "nodemon server.js",
@@ -17,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "googleapis": "^64.0.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
