--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.4.0",
     "react-collapsible": "^2.8.1",
     "react-dom": "^16.13.1",
+    "react-hover": "^2.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
